[package]
name = "blob-exex"
version = "0.1.0"
edition = "2021"

[dependencies]
# reth
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.0" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.0" }
reth-exex = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.0", features = ["serde"] }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.0" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.0" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.0" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.0" }

# alloy
alloy-consensus = "1.0.37"
alloy-primitives = "1.3.1"
alloy-eips = { version = "1.1.3", default-features = false }

# database
rusqlite = { version = "0.32", features = ["bundled"] }

# async
futures = "0.3"

# misc
eyre = "0.6"

[dev-dependencies]
reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.0" }
reth-testing-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.0" }
