[package]
name = "blob-exex"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "blob-exex"
path = "src/main.rs"

[[bin]]
name = "blob-web"
path = "src/bin/web.rs"

[dependencies]
# reth
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.0" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.0" }
reth-exex = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.0", features = ["serde"] }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.0" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.0" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.0" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.0" }

# alloy
alloy-consensus = "1.0.37"
alloy-primitives = "1.3.1"
alloy-eips = { version = "1.1.3", default-features = false }

# database
rusqlite = { version = "0.32", features = ["bundled"] }

# web server
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }

# async
futures = "0.3"

# misc
eyre = "0.6"

[dev-dependencies]
reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.0" }
reth-testing-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.0" }
