[package]
name = "blob-exex"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "blob-exex"
path = "src/exex.rs"

[[bin]]
name = "blob-web"
path = "src/web.rs"

[dependencies]
# reth
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-exex = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", features = ["serde"] }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }

# alloy
alloy-consensus = "1.0.37"
alloy-primitives = "1.3.1"
alloy-eips = { version = "1.1.3", default-features = false }

# database
rusqlite = { version = "0.32", features = ["bundled"] }

# web server
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# async
futures = "0.3"

# misc
eyre = "0.6"

[dev-dependencies]
reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-testing-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
